Currently trying to set up the random joke get request but it's now crashing when I go to the random joke page... If I can't figure it out I might rework the whole code or set up a background process sort of thing that I saw someone do.

--- a/app/src/main/res/layout/content_random_joke.xml
+++ b/app/src/main/res/layout/content_random_joke.xml
@@ -9,7 +9,7 @@
     tools:showIn="@layout/activity_random_joke">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/jokeArea"
         android:layout_width="344dp"
         android:layout_height="224dp"
         android:layout_alignParentTop="true"
