--- a/app/src/main/res/layout/content_random_joke.xml
+++ b/app/src/main/res/layout/content_random_joke.xml
@@ -15,7 +15,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="18dp"
-        android:text="TextView" />
+        android:text="Insert Joke Here" />
 
     <Button
         android:id="@+id/newrandom"
