--- a/app/src/main/res/layout/content_random_joke.xml
+++ b/app/src/main/res/layout/content_random_joke.xml
@@ -14,24 +14,28 @@
         android:layout_height="224dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="107dp"
         android:text="Insert Joke Here" />
 
     <Button
         android:id="@+id/newrandom"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
+        android:layout_width="231dp"
+        android:layout_height="65dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="170dp"
-        android:text="New Joke" />
+        android:layout_marginBottom="196dp"
+        android:background="@android:color/holo_blue_light"
+        android:text="New Joke"
+        android:textColor="@android:color/black"
+        android:textSize="24dp" />
 
     <Button
         android:id="@+id/backrandom"
-        android:layout_width="250dp"
+        android:layout_width="183dp"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/newrandom"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="80dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginBottom="60dp"
         android:text="Home" />
 </RelativeLayout>
