--- a/app/src/main/res/layout/activity_category_three.xml
+++ b/app/src/main/res/layout/activity_category_three.xml
@@ -43,7 +43,7 @@
         android:text="Funny Joke" />
 
     <Button
-        android:id="@+id/categoryHomeOne"
+        android:id="@+id/categoryHomeThree"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/homeThree"
