Finished the random aspect, it easily switches between the three different categories.

--- a/app/src/main/res/layout/activity_category_one.xml
+++ b/app/src/main/res/layout/activity_category_one.xml
@@ -24,8 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/homeOne"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="-119dp"
-        android:layout_marginBottom="128dp"
+        android:layout_marginStart="-118dp"
+        android:layout_marginBottom="92dp"
         android:background="@android:color/holo_blue_light"
         android:text="Categories"
         android:textColor="@android:color/black"
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="196dp"
+        android:layout_marginBottom="161dp"
         android:background="@android:color/holo_blue_light"
         android:text="New Joke"
         android:textColor="@android:color/black"
@@ -50,8 +50,20 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="21dp"
-        android:layout_marginLeft="21dp"
-        android:layout_marginTop="21dp"
-        android:text="Funny Joke" />
+        android:layout_marginStart="22dp"
+        android:layout_marginLeft="22dp"
+        android:layout_marginTop="73dp"
+        android:text="Funny Joke"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/headerOne"
+        android:layout_width="340dp"
+        android:layout_height="39dp"
+        android:layout_alignStart="@+id/jokeTextOne1"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="18dp"
+        android:text="Dad Jokes"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 </RelativeLayout>
