--- a/app/src/main/res/layout/activity_category_two.xml
+++ b/app/src/main/res/layout/activity_category_two.xml
@@ -22,9 +22,10 @@
         android:id="@+id/jokeCategoryTwo"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/categoryHomeTwo"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="196dp"
+        android:layout_marginStart="-1dp"
+        android:layout_marginBottom="159dp"
         android:background="@android:color/holo_blue_light"
         android:text="New Joke"
         android:textColor="@android:color/black"
@@ -33,14 +34,15 @@
     <TextView
         android:id="@+id/jokeTextTwo"
         android:layout_width="340dp"
-        android:layout_height="211dp"
+        android:layout_height="202dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="21dp"
         android:layout_marginLeft="21dp"
-        android:layout_marginTop="21dp"
-        android:text="Funny Joke" />
+        android:layout_marginTop="73dp"
+        android:text="Funny Joke"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/categoryHomeTwo"
@@ -48,10 +50,21 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/homeTwo"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="-119dp"
-        android:layout_marginBottom="128dp"
+        android:layout_marginStart="-115dp"
+        android:layout_marginBottom="91dp"
         android:background="@android:color/holo_blue_light"
         android:text="Categories"
         android:textColor="@android:color/black"
         android:textSize="18dp" />
+
+    <TextView
+        android:id="@+id/headerTwo"
+        android:layout_width="339dp"
+        android:layout_height="42dp"
+        android:layout_alignStart="@+id/jokeTextTwo"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="18dp"
+        android:text="Chuck Norris"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 </RelativeLayout>
