--- a/app/src/main/res/layout/content_random_joke.xml
+++ b/app/src/main/res/layout/content_random_joke.xml
@@ -10,24 +10,26 @@
 
     <TextView
         android:id="@+id/jokeArea"
-        android:layout_width="344dp"
-        android:layout_height="224dp"
+        android:layout_width="345dp"
+        android:layout_height="262dp"
+        android:layout_alignEnd="@+id/backrandom"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="107dp"
-        android:text="Insert Joke Here" />
+        android:layout_marginTop="73dp"
+        android:layout_marginEnd="0dp"
+        android:text="Funny Joke!"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/newrandom"
-        android:layout_width="231dp"
-        android:layout_height="65dp"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="196dp"
+        android:layout_marginBottom="105dp"
         android:background="@android:color/holo_blue_light"
         android:text="New Joke"
         android:textColor="@android:color/black"
-        android:textSize="24dp" />
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/backrandom"
@@ -35,7 +37,19 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/newrandom"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="108dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginStart="117dp"
+        android:layout_marginBottom="16dp"
         android:text="Home" />
+
+    <TextView
+        android:id="@+id/randomHeader"
+        android:layout_width="341dp"
+        android:layout_height="42dp"
+        android:layout_alignStart="@+id/jokeArea"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="18dp"
+        android:text="Random!"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 </RelativeLayout>
